--- a/src/Components/Pagination/Pagination.module.scss
+++ b/src/Components/Pagination/Pagination.module.scss
@@ -1,10 +1,49 @@
-.root {
+// .root {
+//   li {
+//     display: inline-block;
+
+//     a {
+//       text-align: center;
+//       width: 45px;
+//       line-height: 42px;
+//       height: 45px;
+//       border: 1px solid #fe5f1e;
+//       border-radius: 30px;
+//       margin-right: 10px;
+//       cursor: pointer;
+//       display: inline-block;
+//       color: #fe5f1e;
+
+//       &:hover {
+//         background-color: #fe5f1e;
+//         color: #fff;
+//       }
+//     }
+//   }
+
+//   :global {
+//     .selected {
+//       a {
+//         background-color: #fe5f1e;
+//         color: #fff;
+//       }
+//     }
+//   }
+// }
+
+
+$primary-color: #fe5f1e;
+
+.pagination {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  li {
-    display: inline-block;
-    a {
+}
+
+:global {
+  .rc-pagination {
+    &-item { 
+      font-size: 18px;
       text-align: center;
       width: 45px;
       line-height: 42px;
@@ -14,28 +53,69 @@
       margin-right: 10px;
       cursor: pointer;
       display: inline-block;
-      color: #fe5f1e;
+      
 
-      &:hover {
-        background-color: #fe5f1e;
-        color: #fff;
+      &:hover,
+      &:focus {
+        border-color: $primary-color;
+        a {
+          color: $primary-color;
+        }
+      }
+
+      &-active {
+        border-color: $primary-color;
+        a {
+          color: $primary-color;
+        }
+
+        &:focus,
+        &:hover {
+          border-color: lighten($primary-color, 10%);
+        }
+
+        &:focus a,
+        &:hover a {
+          border-color: lighten($primary-color, 10%);
+        }
       }
     }
+
     
-  }
+    .rc-pagination-prev .rc-pagination-item-link,
+.rc-pagination-next .rc-pagination-item-link {
+  font-size: 18px;
+      text-align: center;
+      width: 45px;
+      line-height: 42px;
+      height: 45px;
+      border: 1px solid #fe5f1e;
+      border-radius: 30px;
+      cursor: pointer;
+      display: inline-block;
+     
+    }
 
-  :global {
-    .selected {
-      a {
-        background-color: #fe5f1e;
-        color: #fff;
+    &-prev,
+    &-next {
+      &:focus .rc-pagination-item-link,
+      &:hover .rc-pagination-item-link {
+        color: $primary-color;
+        border-color: $primary-color;
+        border-radius: 30px;
+        font-size: 18px;
       }
     }
-    .disabled {
-      a, li{
-        color: fade-out(#000, .45);
-        border-color: #d9d9d9;
-        pointer-events: none;
+
+    &-disabled {
+      &,
+      &:hover,
+      &:focus {
+        .rc-pagination-item-link {
+          color: fade-out(#000, .25);
+          border-color: #d9d9d9;
+          pointer-events: none;
+        }
       }
     }
   }
