--- a/src/Components/Pagination/Pagination.module.scss
+++ b/src/Components/Pagination/Pagination.module.scss
@@ -20,44 +20,44 @@ $primary-color: #fe5f1e;
       cursor: pointer;
       display: inline-block;
       
+      a {
+        color: $primary-color
+      }
+
+      .rc-pagination-item-active a{
+        color: #fff;
+      }
+
       &:hover,
       &:focus {
         border-color: $primary-color;
+        background-color: $primary-color;
         a {
-          color: $primary-color;
+          color: #fff;
         }
       }
 
       &-active {
         border-color: $primary-color;
+        background-color: $primary-color;
         a {
-          color: $primary-color;
-        }
-
-        &:focus,
-        &:hover {
-          border-color: lighten($primary-color, 10%);
-        }
-
-        &:focus a,
-        &:hover a {
-          border-color: lighten($primary-color, 10%);
+          color: #fff;
         }
       }
     }
 
 .rc-pagination-prev .rc-pagination-item-link,
 .rc-pagination-next .rc-pagination-item-link {
-  font-size: 18px;
+      font-size: 28px;
       text-align: center;
       width: 45px;
-      line-height: 42px;
+      line-height: 41px;
       height: 45px;
       border: 1px solid #fe5f1e;
       border-radius: 30px;
       cursor: pointer;
       display: inline-block;
-     
+      color: #fe5f1e;
     }
 
     &-prev,
@@ -67,7 +67,9 @@ $primary-color: #fe5f1e;
         color: $primary-color;
         border-color: $primary-color;
         border-radius: 30px;
-        font-size: 18px;
+        font-size: 28px;
+        color: #fff;
+        background-color: #fe5f1e;
       }
     }
 
@@ -76,9 +78,10 @@ $primary-color: #fe5f1e;
       &:hover,
       &:focus {
         .rc-pagination-item-link {
-          color: fade-out(#000, .25);
+          color: #d9d9d9;
+          background-color: #fff;
           border-color: #d9d9d9;
-          pointer-events: none;
+          cursor: not-allowed;
         }
       }
     }
