--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -139,6 +139,11 @@ body {
   &--cart {
     max-width: 820px;
     margin: 90px auto;
+
+    @media (max-width: 1200px) {
+      margin: 40px auto;
+    }
+
     .content__title {
       margin: 0;
     }
@@ -170,6 +175,11 @@ body {
     }
   }
 
+  .content__items {
+    display: block;
+    min-height: auto;
+  }
+
   &__clear {
     display: flex;
     align-items: center;
@@ -181,6 +191,10 @@ body {
       margin-left: 7px;
       color: #b6b6b6;
       font-size: 18px;
+
+      @media (max-width: 480px) {
+        display: none;
+      }
     }
 
     span,
@@ -206,7 +220,9 @@ body {
   }
 
   &__item {
+    position: relative;
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     border-top: 1px solid $gray-line;
     padding-top: 30px;
@@ -216,7 +232,6 @@ body {
       display: flex;
       align-items: center;
       margin-right: 15px;
-      width: 10%;
 
       img {
         width: 80px;
@@ -235,6 +250,10 @@ body {
         font-size: 22px;
         line-height: 27px;
         letter-spacing: 0.01em;
+
+        @media (max-width: 480px) {
+          font-size: 20px;
+        }
       }
 
       p {
@@ -243,13 +262,48 @@ body {
       }
     }
 
+    &-wrapper {
+      display: flex;
+      flex: 1;
+      justify-content: space-between;
+
+      @media (max-width: 786px) {
+        flex: unset;
+        width: 100%;
+        margin-top: 20px;
+      }
+    }
+
+    &-remove-btn {
+      @media (max-width: 480px) {
+        min-width: 25px;
+        width: 25px;
+        height: 25px;
+      }
+    }
+
     &-count {
+      margin-right: 20px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
 
       &-minus {
+        margin-right: 8px;
+
+        @media (max-width: 480px) {
+          min-width: 25px;
+          width: 25px;
+          height: 25px;
+        }
+
+        &:disabled {
+          pointer-events: none;
+
+          cursor: not-allowed;
+          opacity: 0.6;
+        }
+
         svg {
           path:first-of-type {
             display: none;
@@ -257,21 +311,42 @@ body {
         }
       }
 
+      &-plus {
+        @media (max-width: 480px) {
+          min-width: 25px;
+          width: 25px;
+          height: 25px;
+        }
+      }
+
       b {
+        margin-right: 8px;
         font-size: 22px;
+
+        @media (max-width: 480px) {
+          font-size: 20px;
+        }
       }
     }
 
     &-price {
+      margin-right: 30px;
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 33%;
+
+      @media (max-width: 786px) {
+        margin-right: 0;
+      }
 
       b {
         font-weight: bold;
         font-size: 22px;
         letter-spacing: 0.01em;
+
+        @media (max-width: 480px) {
+          font-size: 20px;
+        }
       }
     }
 
@@ -279,7 +354,12 @@ body {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      width: 4%;
+      
+      @media (max-width: 786px) {
+        position: absolute;
+        top: 30px;
+        right: 0;
+      }
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -315,8 +395,16 @@ body {
       display: flex;
       justify-content: space-between;
 
+      @media (max-width: 576px) {
+        flex-direction: column;
+      }
+
       span {
         font-size: 22px;
+
+        @media (max-width: 480px) {
+          font-size: 20px;
+        }
 
         &:last-of-type {
           b {
@@ -337,11 +425,12 @@ body {
         justify-content: center;
         width: 210px;
 
+        max-width: 45%;
+
         border-color: darken($color: $gray-line, $amount: 10);
 
         span {
           color: darken($color: $gray-line, $amount: 20);
-          font-weight: 500;
           font-weight: 600;
         }
 
@@ -368,19 +457,23 @@ body {
         font-weight: 600;
         width: 210px;
         padding: 16px;
+        max-width: 45%;
       }
     }
   }
 
   &--empty {
-    margin: 80px auto;
-    width: 620px;
+    margin: 0 auto;
+    max-width: 560px;
     text-align: center;
 
     h2 {
-      font-size: 36px;
-      font-weight: 700;
-      margin-bottom: 15px;
+      font-size: 32px;
+      margin-bottom: 10px;
+
+      @media (max-width: 480px) {
+        font-size: 28px;
+      }
     }
 
     p {
@@ -408,5 +501,11 @@ body {
       font-weight: 600;
       font-size: 18px;
     }
+  }
+}
+
+.only-for-pc {
+  @media (max-width: 576px) {
+    display: none;
   }
 }
