--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -4,6 +4,12 @@
   ul {
     display: flex;
 
+    @media (max-width: 1024px) {
+      padding-bottom: 10px;
+      max-width: 100%;
+      overflow: auto;
+    }
+
     li {
       background-color: #f9f9f9;
       padding: 13px 30px;
