--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,31 +4,54 @@
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
 
-  @media(max-width: 690px) {
-    padding-bottom: 100px;
-}
+  @media (max-width: 645px) {
+    padding: 25px 0;
+  }
 
-@media(max-width: 625px) {
-  padding: 40px 0;
-}
 
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    @media(max-width: 625px) {
+    @media (max-width: 1050px) {
       flex-direction: column;
+    }
+  }
 
-      .header__cart{
-        margin-top: 35px;
-      }
+  &__wrapper {
+    display: flex;
+    align-items: center;
+
+    @media (max-width: 1050px) {
+      margin-bottom: 25px;
+      width: 100%;
+      justify-content: space-between;
+    }
+
+    @media (max-width: 450px) {
+      flex-direction: column;
+    }
+  }
+
+  &__link {
+    margin-right: 70px;
+
+    @media (max-width: 1180px) {
+      margin-right: 40px;
+    }
+
+    @media (max-width: 450px) {
+      margin: 0 0 20px 0;
     }
   }
 
   &__logo {
     display: flex;
-    width: 106%;
+
+    @media (max-width: 700px) {
+      align-items: center;
+    }
 
     img {
       margin-right: 15px;
@@ -42,5 +65,12 @@
       font-weight: 800;
     }
 
+    p {
+      color: #7b7b7b;
+
+      @media (max-width: 700px) {
+        display: none;
+      }
+    }
   }
 }
