--- a/src/Components/Search/Search.module.scss
+++ b/src/Components/Search/Search.module.scss
@@ -9,21 +9,25 @@
     border-radius: 10px;
     font-size: 16px;
     transition: all 2s ease-in-out;
-  
+    
     &:focus, &:hover {
       border-color: rgba(0, 0, 0, 0.2);
     }
-  
-    @media (max-width: 1180px) {
-      width: auto;
+
+    @media (max-width: 980px) {
+      width: 200px;
     }
   
-    @media (max-width: 700px) {
+    @media (max-width: 768px) {
       padding: 10px 40px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+      width: 450px;
+      flex-direction: column;
     }
   
     @media (max-width: 650px) {
-      width: 200px;
+      width: 100%; 
     }
   
     @media (max-width: 450px) {
