--- a/src/scss/components/_pizza-block.scss
+++ b/src/scss/components/_pizza-block.scss
@@ -1,24 +1,16 @@
 @import '../variables';
 
 .pizza-block {
-  width: 280px;
   text-align: center;
-  margin-bottom: 65px;
-  &-wrapper {
- display: flex;
- justify-content: center;
-}
-
-  &:hover {
-    transform: scale(1.03);
-  }
-
-  &-wrapper {
+  margin-bottom: 45px;
+  a {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__image {
+    max-width: 100%;
     width: 260px;
   }
 
@@ -27,6 +19,7 @@
     font-weight: 900;
     letter-spacing: 1%;
     margin-bottom: 20px;
+    min-height: 29px;
   }
 
   &__selector {
